# tradingviewwithflask

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py  z_debug.py
app/: routes.py
app/templates/: chart.js  chart1.html  chart2.html  chart3.html  index.html  sma1.html  styles.css
static/: chart.js  styles.css
webchart/: __init__.py  data.py  routes.py
webchart/chart/: __init__.py  routes.py
webchart/chart/static/: chart.css  chart.js
webchart/chart/templates/chart/: index.html
webchart/static/: chart.js  styles.css
webchart/templates/: chart.html  demo.html  index.html
